# FLTK_QUANT

./: AGENTS.md  CMakeLists.txt  README.md  config.ini.example
src/: CustomControl.cpp  CustomControl.h  DsLogger.cpp  DsLogger.h  datasource.cpp  datasource.h  main.cpp  tool.cpp  tool.h
test/: test_datasource.cpp
